[package]
name = "actions"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
log = "0.4"
pretty_env_logger = "0.4"
sodiumoxide = "0.2"
url = "2.1"
term = "0.6"
chrono = { version = "0.4", features = ["serde"] }
colored = "1.9"
futures = "0.3"
humantime = "2.0"
humantime-serde = "1.0"
hyperx = "1.0"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
spinner = "0.5"
structopt = "0.3"
tabwriter = { version = "1.2", features = ["ansi_formatting"] }
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
futures-await-test = "0.3"
http = "0.2"